--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
 							<img src="assets/images/yoga-2.png" alt="Logo" style="height: 3rem;">
 						</a>
 					</span>
-					<h1><span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
-								href="index.html#slider03-6">Relief Yoga Studio</a></span></h1>
+					<h1 class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
+								href="index.html#slider03-6">Relief Yoga Studio</a></h1>
 				</div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
 					data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
