am schimbat sectionu in div in footer

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
     </div>
   </section>
 
-  <section data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
+  <div data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
 
 
 
@@ -698,7 +698,7 @@
       </div>
 
     </div>
-  </section>
+  </div>
   
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
