am pus lang si am sters span de la h1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -45,10 +45,10 @@
               <img src="assets/images/yoga-2.png" alt="Logo" style="height: 3rem;">
             </a>
           </span>
-          <h1><span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
+          <h1> class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
               href="index.html#slider03-6">
               Relief Yoga Studio
-            </a></span></h1>
+            </a></h1>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
           data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
