am schimbat primele 2 sau ceva spanuri in div

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 
-  <section data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-1">
+  <div data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-1">
 
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -84,9 +84,9 @@
         </div>
       </div>
     </nav>
-  </section>
+  </div>
 
-  <section data-bs-version="5.1" class="slider3 cid-u1mWurYeJa mbr-fullscreen" id="slider03-6">
+  <div data-bs-version="5.1" class="slider3 cid-u1mWurYeJa mbr-fullscreen" id="slider03-6">
 
     <div class="carousel slide carousel-fade" id="u1yM5cN5qy" data-ride="carousel" data-bs-ride="carousel"
       data-interval="5000" data-bs-interval="5000">
@@ -136,7 +136,7 @@
         <span class="sr-only visually-hidden">Next</span>
       </a>
     </div>
-  </section>
+  </div>
 
   <section data-bs-version="5.1" class="start article05 cid-u1mUX8kMCK" id="article05-5">
 
