--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <img src="assets/images/yoga-2.png" alt="Logo" style="height: 3rem;">
             </a>
           </span>
-          <h1> class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
+          <h1 class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
               href="index.html#slider03-6">
               Relief Yoga Studio
             </a></h1>
