am schimbat aceleasi chestii (5) si aci

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
 
 <body>
 
-    <section data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-7">
+    <div data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-7">
 
 
         <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -48,8 +48,8 @@
                             <img src="assets/images/yoga-2.png" alt="Logo" style="height: 3rem;">
                         </a>
                     </span>
-                    <h1><span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
-                                href="index.html#slider03-6">Relief Yoga Studio</a></span></h1>
+                    <h1 class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7"
+                                href="index.html#slider03-6">Relief Yoga Studio</a></h1>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
                     data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
@@ -91,9 +91,9 @@
                 </div>
             </div>
         </nav>
-    </section>
+    </div>
 
-    <section data-bs-version="5.1" class="timeline04 cid-u1ns5JHFp1" id="timeline04-n">
+    <div data-bs-version="5.1" class="timeline04 cid-u1ns5JHFp1" id="timeline04-n">
 
 
 
@@ -226,7 +226,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <section data-bs-version="5.1" class="content6 cid-u1rvkKvZXm" id="content6-1d">
 
@@ -521,7 +521,7 @@
         </div>
     </section>
 
-    <section data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
+    <div data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
 
 
 
@@ -591,7 +591,7 @@
             </div>
 
         </div>
-    </section>
+    </div>
     
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
