3 sectionuri schimbate in divuri

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
 <body>
 
-	<section data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-8">
+	<div data-bs-version="5.1" class="menu menu1 cid-u1mK9y09Da" once="menu" id="menu01-8">
 
 
 		<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -89,9 +89,9 @@
 				</div>
 			</div>
 		</nav>
-	</section>
+	</div>
 
-	<section data-bs-version="5.1" class="contacts2 cid-u1nB7rSczq" id="contacts2-13">
+	<div data-bs-version="5.1" class="contacts2 cid-u1nB7rSczq" id="contacts2-13">
 
 
 
@@ -159,7 +159,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<section data-bs-version="5.1" class="map2 cid-u1nB92lJir" id="map2-14">
 
@@ -359,7 +359,7 @@
 		</div>
 	</section>
 
-	<section data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
+	<div data-bs-version="5.1" class="footer5 cid-u1nCrE695u" once="footers" id="footer5-15">
 
 
 
@@ -429,7 +429,7 @@
 			</div>
 
 		</div>
-	</section>
+	</div>
 
 	<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/smoothscroll/smooth-scroll.js"></script>
